# Flam-Assessment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flamvisiontask/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flamvisiontask/: MainActivity.kt  VisionProcessor.kt
app/src/main/java/gl_render/: VisionRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/flamvisiontask/: ExampleUnitTest.kt
cpp_src/: vision_processor.cpp
gradle/wrapper/: gradle-wrapper.properties
web_ui/: index.html  main.ts
